<resources>
    <string name="app_name">GasFinder</string>

    <string name="fuel_type">Fuel Type</string>
    <string name="order_by">Order By</string>
    <string name="distance">Dist. (mi.)</string>
    <string name="find_stations">Find Stations!</string>
    <string name="default_distance">10</string>
    <string name="next">Next Page ></string>
    <string name="Regular">Regular</string>
    <string name="Premium">Premium</string>
    <string name="Plus">Plus</string>
    <string name="Diesel">Diesel</string>
    <string name="default_string">Default</string>
    <string name="log_fillup">Log Fillup!</string>
    <string name="history">History</string>
</resources>
