<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michael.gasfinder.ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:layout_marginTop="10sp">
            <TableRow>
                <TextView
                    android:text="@string/distance"
                    android:textColor="@color/textOrange"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    />
                <TextView
                    android:text="@string/fuel_type"
                    android:textColor="@color/textOrange"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    />
                <TextView
                    android:text="@string/order_by"
                    android:textColor="@color/textOrange"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    />
            </TableRow>

            <TableRow
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/focusRow">
                <EditText
                    android:id="@+id/radius"
                    android:text="@string/default_distance"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:nextFocusUp="@id/focusRow"
                    />
                <Spinner
                    android:id="@+id/fuelSpinner"
                    />
                <Spinner
                    android:id="@+id/orderSpinner"
                    />
            </TableRow>
            <TableRow>
                <!--Empty textview to center the buddon-->
                <TextView />
                <Button
                    android:text="@string/find_stations"
                    android:textSize="20sp"
                    android:onClick="findStations"
                    android:textColor="@color/textOrange"/>
            </TableRow>
        </TableLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/gas_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
