<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michael.gasfinder.LogActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_fillup"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:textColor="@color/textOrange"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:textSize="25dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalInput"
                    android:inputType="numberDecimal"
                    android:text="0"
                    android:textSize="25dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Total"
                    android:textSize="25dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type"
                android:textSize="25sp"
                android:textColor="@color/textOrange"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:weightSum="4">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup"
                    android:layout_marginStart="10sp">

                    <RadioButton
                        android:id="@+id/radioRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Regular"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/radioPlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Plus"
                        />
                    <RadioButton
                        android:id="@+id/radioPremium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Premium"
                        />
                    <RadioButton
                        android:id="@+id/radioDiesel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Diesel"
                        />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submitButton"
                android:text="Submit"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textColor="@color/textOrange"
                android:textSize="20sp"
                android:layout_marginTop="5sp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
